Optimize the Jacobi method and add documentation
Moved the stencil to the outer loop. Added documentation to the library and
readme.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,8 @@ authors = ["Ben"]
 
 [dependencies]
 nalgebra = "*"
+pbr = "*"
 
 [lib]
 name = "jacobi"
 path = "src/lib.rs"
-
-[profile.release]
-debug = true
